[package]
name = "auction-houses"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["rustls"] }
actix-rt = "1.1.1"
actix-http = "2.1.0"
log = "0.4.11"
env_logger = "0.8.1"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["macros","dns"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = {version = "0.10.9", features = ["json"]}